Refatorado controllers para separar em pasta específica;

--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,8 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/controllers/sharedListCtrl.js"></script>
+    <script src="js/controllers/listCtrl.js"></script>
     <script src="js/services/sharedListAPIService.js"></script>
   </head>
 
