--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
     <script src="js/controllers/listCtrl.js"></script>
     <script src="js/services/sharedListAPIService.js"></script>
     <script src="js/services/localStorageService.js"></script>
+    <script src="js/lodash.min.js"></script>
   </head>
 
   <body ng-app="starter">
