Adicionado variável para url do server couchdb e add no .gitignore;

--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/services/sharedListAPIService.js"></script>
     <script src="js/services/localStorageService.js"></script>
     <script src="js/services/pouchdbService.js"></script>
+    <script src="js/services/remoteService.js"></script>
     <script src="js/underscore.min.js"></script>
     <script src="lib/pouchdb/dist/pouchdb.min.js"></script>
   </head>
